--- a/contact.html
+++ b/contact.html
@@ -22,12 +22,12 @@ contact-main: yes
   <!-- Nav tabs -->
   <div class="contact-nav container">
     <ul class="nav nav-tabs" role="tablist">
-      <li role="presentation" class="active"><a href="#sales-tab" aria-controls="sales-tab" role="tab" data-toggle="tab">Sales</a></li>
-      <li role="presentation"><a href="#rentals-tab" aria-controls="rentals-tab" role="tab" data-toggle="tab">Rentals</a></li>
-      <li role="presentation"><a href="#repairs-tab" aria-controls="repairs-tab" role="tab" data-toggle="tab">Repairs</a></li>
-      <li role="presentation"><a href="#wb-tab" aria-controls="wb-tab" role="tab" data-toggle="tab">Waterblast Dealers</a></li>
-      <li role="presentation"><a href="#sewer-tab" aria-controls="sewer-tab" role="tab" data-toggle="tab">Sewer Dealers</a></li>
-      <li role="presentation"><a href="#downhole-tab" aria-controls="downhole-tab" role="tab" data-toggle="tab">Downhole Dealers</a></li>
+      <li role="presentation" class="active sales-tab"><a href="#sales-tab" aria-controls="sales-tab" role="tab" data-toggle="tab">Sales</a></li>
+      <li role="presentation" class="rentals-tab"><a href="#rentals-tab" aria-controls="rentals-tab" role="tab" data-toggle="tab">Rentals</a></li>
+      <li role="presentation" class="repairs-tab"><a href="#repairs-tab" aria-controls="repairs-tab" role="tab" data-toggle="tab">Repairs</a></li>
+      <li role="presentation" class="wb-tab"><a href="#wb-tab" aria-controls="wb-tab" role="tab" data-toggle="tab">Waterblast Dealers</a></li>
+      <li role="presentation" class="sewer-tab"><a href="#sewer-tab" aria-controls="sewer-tab" role="tab" data-toggle="tab">Sewer Dealers</a></li>
+      <li role="presentation" class="downhole-tab"><a href="#downhole-tab" aria-controls="downhole-tab" role="tab" data-toggle="tab">Downhole Dealers</a></li>
     </ul>
     <div class="tab-content padding-tb-30">
       
@@ -222,119 +222,12 @@ contact-main: yes
             <h2 class="bold">Tool Repairs &amp; Service</h2>
             <hr>
             <p><strong>Repair and Maintenance Service is available by the same technicians who build and test our tools.</strong></p>
-            <p>Contact us for an RMA number for return of any StoneAge parts.<br> Please fill out as much of the form as possible.</p>
-            <!-- Repair RMA -->
-            <div class="panel-group width-60" id="accordion" role="tablist" aria-multiselectable="true">
-              <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingOne">
-                  <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" style="font-size:14px;">
-                      Request an RMA for <strong>Repair/Service</strong>
-                    </a>
-                  </h4>
-                </div>
-                <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                  <div class="panel-body">
-                    <!--[if lte IE 8]>
-                    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-                    <![endif]-->
-                    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
-                    <script>
-                      hbspt.forms.create({ 
-                        portalId: '1875880',
-                        formId: '34632cce-20a3-4920-b67a-d3d392ed0f5f'
-                      });
-                    </script>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Warranry RMA -->
-            <div class="panel-group width-60" id="accordion" role="tablist" aria-multiselectable="true">
-              <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingTwo">
-                  <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="font-size:14px;">
-                      Request an RMA for <strong>Warranty Evaluation</strong>
-                    </a>
-                  </h4>
-                </div>
-                <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                  <div class="panel-body">
-                    <!--[if lte IE 8]>
-                    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-                    <![endif]-->
-                    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
-                    <script>
-                      hbspt.forms.create({ 
-                        portalId: '1875880',
-                        formId: '1afa52f9-f923-4949-9d02-b45d2fa00290'
-                      });
-                    </script>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Warranry RMA -->
-            <div class="panel-group width-60 margin-bottom-30" id="accordion" role="tablist" aria-multiselectable="true">
-              <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingThree">
-                  <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="font-size:14px;">
-                      Request an RMA for <strong>Return to Stock</strong>
-                    </a>
-                  </h4>
-                </div>
-                <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                  <div class="panel-body">
-                    <!--[if lte IE 8]>
-                    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-                    <![endif]-->
-                    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
-                    <script>
-                      hbspt.forms.create({ 
-                        portalId: '1875880',
-                        formId: '8da53b05-8378-44e1-9a60-3eb4ceef9287'
-                      });
-                    </script>
-
-                  </div>
-                </div>
-              </div>
-            </div>
+            <p>Contact us for a Return Merchandise Authorization (RMA) to return any StoneAge parts.</p>
+            <p><a href="https://www.stoneagetools.com/assets/pdf/reference/RMA_Checklist.pdf" target="_blank">DOWNLOAD THE RMA CHECKLIST FOR RETURNS</a></p>
             <hr>
-            <p>You can send your tool in for repair or visit one of our regional facilities:</p>
-            <div class="row">
-              <div class="col-sm-2 col-sm-offset-1">
-                <h5 class="bold slab">Houston Area</h5>
-                <p>+1 (281) 888-5069<br>
-                  <a href="/houston">View details</a></p>
-              </div>
-              <div class="col-sm-2">
-                <h5 class="bold slab">Louisiana</h5>
-                <p>+1 (225) 508-3520<br>
-                  <a href="/louisiana">View details</a></p>
-              </div>
-              <div class="col-sm-2">
-                <h5 class="bold slab">Ohio</h5>
-                <p>+1 (440) 230-8080<br>
-                  <a href="/ohio">View details</a></p>
-              </div>
-              <div class="col-sm-2">
-                <h5 class="bold slab">Headquarters</h5>
-                <p>+1 (970) 259-2869<br>
-                  <a href="/durango-headquarters">View details</a></p>
-              </div>
-              <div class="col-sm-2">
-                <h5 class="bold slab">Europe</h5>
-                <p>+44 (0) 1684 892065<br>
-                  <a href="/europe">View details</a></p>
-              </div>
-              <div class="col-sm-2">
-              </div>
-            </div>
-            <div class="row padding-tb-30"><p><em>We try to complete repairs and test every tool within three days of receipt.<br>See our listing of Sewer Dealers to find a Warthog Authorized Repair Center in your area.</em></p></div>
+            <div class="row padding-tb-30">
+            <p><em>We try to complete repairs and test every tool within three days of receipt.</em></p>
+            <p><a href="/service">Click here for more service information.</a></p></div>
           </div>
         </div>
       </div>
