--- a/rentals.html
+++ b/rentals.html
@@ -76,7 +76,7 @@ master-slider: yes
         <li>On site tech support</li>
         <li>Tool servicing and repairs</li>
       </ul>
-      <a href="http://info.stoneagetools.com/demo-request" class="btn btn-lg btn-block" role="button" style="margin-top:30px;">Request a Demo</a>
+      <a href="/request-demo" class="btn btn-lg btn-block" role="button" style="margin-top:30px;">Request a Demo</a>
     </div>
   </div>
 </section>
