--- a/sewer-tools-nozzles/warthog-wgr-switcher.html
+++ b/sewer-tools-nozzles/warthog-wgr-switcher.html
@@ -95,63 +95,132 @@ master-slider: yes
           <!-- Specifications -->
           <section id="section-bar-1">
             <div class="col-sm-5">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Tool Family</th>
-                  <td colspan="2">Warthog Switcher</td>
-                </tr>
-                <tr>
-                  <th>Tool Model</th>
-                  <td colspan="2">WGR Switcher</td>
-                </tr>
-                <tr>
-                  <th>Pipe Size</th>
-                  <td>8-36 in.</td>
-                  <td><span class="metric">203-914 mm</span>
-                </tr>
-                <tr>
-                  <th>Pressure Range</th>
-                  <td>1500–5k psi</td>
-                  <td><span class="metric">100–350 bar</span>
-                </tr>
-                <tr>
-                  <th>Flow Range</th>
-                  <td>50-80 gpm</td>
-                  <td><span class="metric">190-300 l/min</span></td>
-                </tr>
-                <tr>
-                  <th>Rotation Speed</th>
-                  <td colspan="2">150-300 rpm</td>
-                </tr>
-                <tr>
-                  <th>Inlet Connection</th>
-                  <td colspan="2">1 NPT or BSPP, 1 1/4 NPT or BSPP</td>
-                </tr>
-<!--
-                <tr>
-                  <th>Nozzle Ports</th>
-                  <td colspan="2">Cleaning: 2 x 100&deg;, 2 x 125&deg;<br>
-                  Flushing: 4 x 155&deg;</td>
-                </tr>
--->
-                <tr>
-                  <th>Diameter</th>
-                  <td>4.5 in.</td>
-                  <td><span class="metric">114 mm</span></td>
-                </tr>
-                <tr>
-                  <th>Length</th>
-                  <td>10.25 in.</td>
-                  <td><span class="metric">260 mm</span></td>
-                </tr>
-                <tr>
-                  <th>Weight</th>
-                  <td>13 lb</td>
-                  <td><span class="metric">5.9 kg</span></td>
-                </tr>
-              </tbody>
-              </table>
+              <!-- Nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#swt-1" aria-controls="swt-1" role="tab" data-toggle="tab">WGR-SWT-1</a></li>
+                <li role="presentation"><a href="#swt-125" aria-controls="swt-125" role="tab" data-toggle="tab">WGR-1-1/4-SWT</a></li>
+              </ul>
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="swt-1">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Family</th>
+                      <td colspan="2">Warthog Switcher</td>
+                    </tr>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">WGR-SWT-1</td>
+                    </tr>
+                    <tr>
+                      <th>Pipe Size</th>
+                      <td>8-36 in.</td>
+                      <td><span class="metric">203-914 mm</span>
+                    </tr>
+                    <tr>
+                      <th>Pressure Range</th>
+                      <td>1200–5k psi</td>
+                      <td><span class="metric">83–345 bar</span>
+                    </tr>
+                    <tr>
+                      <th>Flow Range</th>
+                      <td>50-80 gpm</td>
+                      <td><span class="metric">189-303 l/min</span></td>
+                    </tr>
+                    <tr>
+                      <th>Rotation Speed</th>
+                      <td colspan="2">150-300 rpm</td>
+                    </tr>
+                    <tr>
+                      <th>Inlet Connection</th>
+                      <td colspan="2">1 NPT or BSPP, 1 1/4 NPT or BSPP</td>
+                    </tr>
+    <!--
+                    <tr>
+                      <th>Nozzle Ports</th>
+                      <td colspan="2">Cleaning: 2 x 100&deg;, 2 x 125&deg;<br>
+                      Flushing: 4 x 155&deg;</td>
+                    </tr>
+    -->
+                    <tr>
+                      <th>Diameter</th>
+                      <td>4.5 in.</td>
+                      <td><span class="metric">114 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Length</th>
+                      <td>11 in.</td>
+                      <td><span class="metric">279 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
+                      <td>14.5 lb</td>
+                      <td><span class="metric">6.6 kg</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="swt-125">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Family</th>
+                      <td colspan="2">Warthog Switcher</td>
+                    </tr>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">WGR-1-1/4-SWT</td>
+                    </tr>
+                    <tr>
+                      <th>Pipe Size</th>
+                      <td>8-48 in.</td>
+                      <td><span class="metric">203-1219 mm</span>
+                    </tr>
+                    <tr>
+                      <th>Pressure Range</th>
+                      <td>1200–5k psi</td>
+                      <td><span class="metric">83–345 bar</span>
+                    </tr>
+                    <tr>
+                      <th>Flow Range</th>
+                      <td>80-120 gpm</td>
+                      <td><span class="metric">303-454 l/min</span></td>
+                    </tr>
+                    <tr>
+                      <th>Rotation Speed</th>
+                      <td colspan="2">150-300 rpm</td>
+                    </tr>
+                    <tr>
+                      <th>Inlet Connection</th>
+                      <td colspan="2">1 NPT or BSPP, 1 1/4 NPT or BSPP</td>
+                    </tr>
+    <!--
+                    <tr>
+                      <th>Nozzle Ports</th>
+                      <td colspan="2">Cleaning: 2 x 100&deg;, 2 x 125&deg;<br>
+                      Flushing: 4 x 155&deg;</td>
+                    </tr>
+    -->
+                    <tr>
+                      <th>Diameter</th>
+                      <td>4.5 in.</td>
+                      <td><span class="metric">114 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Length</th>
+                      <td>11.5 in.</td>
+                      <td><span class="metric">292 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
+                      <td>14.9 lb</td>
+                      <td><span class="metric">6.8 kg</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+              </div>
             </div>
             <aside class="col-sm-3 col-sm-offset-4 aside-box">
               <h3>Need Support?</h3>
