--- a/sewer-tools-nozzles/warthog-whr-hybrid-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-hybrid-switcher.html
@@ -102,7 +102,7 @@ range of applications</li>
                 </tr>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">WHR Hybrid Switcher</td>
+                  <td colspan="2">WHR-HYBRID-SWT</td>
                 </tr>
                 <tr>
                   <th>Pipe Size</th>
@@ -112,12 +112,12 @@ range of applications</li>
                 <tr>
                   <th>Pressure Range</th>
                   <td>1200–5k psi</td>
-                  <td><span class="metric">83–350 bar</span>
+                  <td><span class="metric">83–345 bar</span>
                 </tr>
                 <tr>
                   <th>Flow Range</th>
                   <td>30-50 gpm</td>
-                  <td><span class="metric">114-190 l/min</span></td>
+                  <td><span class="metric">114-189 l/min</span></td>
                 </tr>
                 <tr>
                   <th>Flow Rating</th>
@@ -148,12 +148,12 @@ range of applications</li>
                 <tr>
                   <th>Length</th>
                   <td>8.8 in.</td>
-                  <td><span class="metric">233 mm</span></td>
+                  <td><span class="metric">224 mm</span></td>
                 </tr>
                 <tr>
                   <th>Weight</th>
-                  <td>9.05 lb</td>
-                  <td><span class="metric">4.1 kg</span></td>
+                  <td>9 lb</td>
+                  <td><span class="metric">4 kg</span></td>
                 </tr>
               </tbody>
               </table>
