--- a/sewer-tools-nozzles/warthog-whr-magnum.html
+++ b/sewer-tools-nozzles/warthog-whr-magnum.html
@@ -102,7 +102,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">WHR</td>
+                  <td colspan="2">WHR-1/2 &amp; WHR-3/4</td>
                 </tr>
                 <tr>
                   <th>Pipe Size</th>
@@ -111,13 +111,13 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Pressure Range</th>
-                  <td>1500–8k psi</td>
-                  <td><span class="metric">100–550 bar</span>
+                  <td>1.2–8k psi</td>
+                  <td><span class="metric">83–552 bar</span>
                 </tr>
                 <tr>
                   <th>Flow Range</th>
                   <td>14-50 gpm</td>
-                  <td><span class="metric">60-190 l/min</span></td>
+                  <td><span class="metric">53-189 l/min</span></td>
                 </tr>
                 <tr>
                   <th>Flow Rating</th>
@@ -142,7 +142,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Diameter</th>
-                  <td>3.625 in.</td>
+                  <td>3.6 in.</td>
                   <td><span class="metric">92 mm</span></td>
                 </tr>
                 <tr>
@@ -152,8 +152,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Weight</th>
-                  <td>6.75 lb</td>
-                  <td><span class="metric">3 kg</span></td>
+                  <td>6.3 lb</td>
+                  <td><span class="metric">2.9 kg</span></td>
                 </tr>
               </tbody>
               </table>
