--- a/sewer-tools-nozzles/warthog-whr-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-switcher.html
@@ -108,7 +108,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">WHR Switcher</td>
+                  <td colspan="2">WHR-SWT</td>
                 </tr>
                 <tr>
                   <th>Pipe Size</th>
@@ -117,13 +117,13 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Pressure Range</th>
-                  <td>1500–8k psi</td>
-                  <td><span class="metric">103–550 bar</span>
+                  <td>1.2–8k psi</td>
+                  <td><span class="metric">83–552 bar</span>
                 </tr>
                 <tr>
                   <th>Flow Range</th>
-                  <td>20-45 gpm</td>
-                  <td><span class="metric">76-170 l/min</span></td>
+                  <td>14-45 gpm</td>
+                  <td><span class="metric">53-170 l/min</span></td>
                 </tr>
                 <tr>
                   <th>Flow Rating</th>
@@ -148,18 +148,18 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Diameter</th>
-                  <td>3.625 in.</td>
+                  <td>3.6 in.</td>
                   <td><span class="metric">92 mm</span></td>
                 </tr>
                 <tr>
                   <th>Length</th>
-                  <td>8.26 in.</td>
+                  <td>8.25 in.</td>
                   <td><span class="metric">210 mm</span></td>
                 </tr>
                 <tr>
                   <th>Weight</th>
-                  <td>7.48 lb</td>
-                  <td><span class="metric">3.4 kg</span></td>
+                  <td>7.35 lb</td>
+                  <td><span class="metric">3.3 kg</span></td>
                 </tr>
               </tbody>
               </table>
