--- a/sewer-tools-nozzles/warthog-ws.html
+++ b/sewer-tools-nozzles/warthog-ws.html
@@ -106,11 +106,11 @@ master-slider: yes
                   <td>4-8 in.</td>
                   <td><span class="metric">102-204 mm</span>
                 </tr>
-                <tr>
-                  <th>Pressure Range</th>
-                  <td>1500–5k psi</td>
-                  <td><span class="metric">100–350 bar</span
-                ></tr>
+                  <tr>
+                    <th>Pressure Range</th>
+                    <td>1.2–5k psi</td>
+                    <td><span class="metric">83–345 bar</span>
+                  </tr>
                 <tr>
                   <th>Flow Range</th>
                   <td>8-20 gpm</td>
