--- a/solutions.html
+++ b/solutions.html
@@ -14,27 +14,30 @@ permalink: /solutions
 
 <section class="container padding-tb-30 margin-bottom-30">
   <div class="col-sm-7">
-    <h1 class="thin grey spaced margin-bottom-30"><em>Custom engineered waterblasting solutions for your most challening jobs</em></h1>
-    <p>StoneAge offers a dedicated resource group for handling your difficult waterblast applications. StoneAge Solutions are available for a wide range of support from simple modifications to turn key comprehensive accessory packages. These services are available directly to our dealers, contractors, and end users.
-</p>
-    <ul class="margin-bottom-30">
-      <li>Surface preparation</li>
-      <li>Online boiler cleaning</li>
-      <li>Portable, external bundle blasting</li>
-      <li>Internal and external drill pipe cleaning</li>
-    </ul>
+    <h1 class="thin grey spaced margin-bottom-30"><em>Custom engineered waterblasting solutions for your most challenging jobs</em></h1>
+    <p>StoneAge Solutions is here to educate industrial cleaning contractors and asset owners on the benefits of adopting automated waterblasting solutions as the primary method to clean, assist industrial cleaning contractors improve their effectiveness by helping them successfully engage plants, and provide custom engineered waterblasting solutions for hard-to-clean applications.</p>
+    <h3>Automated Solutions</h3>
+    <p>We believe that the successful adoption of automated waterblasting technology requires a partnership between the contractor, the asset owner, and manufacturer of waterblasting equipment. That’s why the StoneAge Solutions team is available for on-site plant visits. We partner with industrial cleaning contractors and plants to provide automated waterblasting job assessments, presentations, and live demonstrations of hands-free, automated equipment. <a href="/rentals">Book a fully equipped StoneAge product demonstration trailer</a> in the US or Europe and have access to all of StoneAge’s latest equipment and tooling.</p>
+    <h3>Contractor Support</h3>
+    <p>The StoneAge Solutions team offers many services to support industrial cleaning contractors such as safety, product and application training, technical support on hard-to-clean applications, and Most Effective Technology (MET) reports. MET reports provide a comprehensive review of the plant-specific waterblasting system and recommendations for safety and efficiency improvements. Go to https://www.stoneagetools.com/training to learn more about the StoneAge Training Program.</p>
+    <h3>Custom Engineered Solutions</h3>
+    <p>The StoneAge Solutions team is here to design custom engineered solutions to help contractors and plants clean the most difficult applications. Our custom solutions range from simple product modifications to comprehensive turnkey packages. Our process allows for close collaboration between our engineering team, the contractor and that plant, leveraging our four decades of global engineering experience. Contact the StoneAge Solutions team today for more information.</p>
     <hr>
-    <p class="bold">For more information about how to customize these tools, contact our Solutions department:</p>
-    <p>+1 (970) 403-1437<br>
-      <a href="mailto:solutions@stoneagetools.com">solutions@stoneagetools.com</a></p>
   </div>
 
-<!--
   <aside class="col-sm-4 col-sm-offset-1 padding-tb-30 cta">
-    <img src="assets/img/striker_trakvac.jpg" class="img-responsive" alt="Custom engineered waterblast solutions">
-    <p class="grey"><span style="text-transform: uppercase;">Surface Prep/Vacuum Attachment</span><br>Modify the <a href="/tracked-striker">Tracked Striker</a> with a short arm and a vacuum attachment for a custom configuration geared for floor cleaning, coating removal, or scarification. The wireless controller keeps the operator safely out of the blast zone. </p>
+    <img src="assets/img/tunnel_cleaner_front_002.png" class="img-responsive" alt="Custom engineered waterblast solutions">
+    <p class="grey margin-top-30" style="font-weight: 300">
+      <strong>For inquiries and quotes please contact:</strong><br><br>
+      <strong>Bill Shires</strong><br>
+      StoneAge Solutions Director<br>
+      Email: <a href="mailto:bill.shires@stoneagetools.com">bill.shires@stoneagetools.com</a><br>
+      Mobile: +1 (970) 903-4218<br><br>
+      <strong>Michael J. Kreeger</strong><br>
+      StoneAge Solutions Technical Sales<br>
+      Email: <a href="mailto:mike.kreeger@stoneagetools.com">mike.kreeger@stoneagetools.com</a><br>
+      Office: +1 (970) 403-1437</p>
   </aside>
--->
 </section>
 
 <!-- Testimonials -->
