--- a/waterblast-automation/air-knife.html
+++ b/waterblast-automation/air-knife.html
@@ -27,16 +27,10 @@ master-slider: yes
       <!-- Master Slider -->
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-light-2" id="masterslider">
-<!--
-          <div class="ms-slide">
-            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
-            <img class="ms-thumb" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/g-o16eETv74"> </a>
-          </div>
--->
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/air-knife-02.jpg" alt="Air Knife hose cleaning accessory">
             <img class="ms-thumb" src="/assets/img/product/thumb-air-knife-02.jpg" alt="thumb">
+              <a data-type="video" href="https://www.youtube.com/embed/SVondbKMtrA"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/air-knife-03.jpg" alt="Air Knife hose cleaning accessory">
@@ -86,7 +80,7 @@ master-slider: yes
             <ul>
                 <li><a href="#section-bar-1"><span>Specifications</span></a></li>
                 <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
-<!--                <li><a href="#section-bar-3"><span>Videos</span></a></li>-->
+                <li><a href="#section-bar-3"><span>Videos</span></a></li>
 <!--              <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
             </ul>
         </nav>
@@ -168,6 +162,23 @@ master-slider: yes
               <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
             </aside>
           </section>
+          
+          <!-- Videos -->
+          <section id="section-bar-3">
+            <div class="row row-centered">
+              <div class="col-sm-4 col-centered">
+                <!-- Lightbox call -->
+                <div>
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #air-knife-vid">
+                    <img src="/assets/img/product/air-knife-01.jpg" alt="Air Knife Overview video" class="img-responsive" />
+                  </a>
+                </div>
+                <!-- End Lightbox call -->
+                <p class="caption">Air Knife Overview</p>
+              </div>
+            </div>
+          </section>
+
 
         </div><!-- /content -->
     </div><!-- /tabs -->
