--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -64,13 +64,7 @@ master-slider: yes
         </div>
         <div class="clearfix"></div>
       </div>
-<!--      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-3l" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>-->
-      
-      <p class="product-description promo-heading" style="text-transform: uppercase;">Updated for 2018! <span style="font-weight: 300;">What's New:</span></p>
-      <ul class="feature-list">
-        <li><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank" style="padding-left: 40px;">MORE POWER FOR DEMANDING APPLICATIONS</a></li>
-        <li><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank" style="padding-left: 40px;">NEW BELT OPTION</a></li>
-      </ul>
+      <p class="product-description promo-heading"><em>Package it with AutoPacks! <a href="/autopack-3l" style="font-weight:300;">Find out how <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></em></p>
       
       <p class="product-description">The StoneAge AutoBox ABX-3L is an automated system for hands-free heat exchanger tube cleaning applications. It is designed to run triple, dual, or single flex lance setups with an emphasis on portability, ease of setup, and safety.</p>
       <p>The ABX-3L can be used with any pressure rated hose ranging in size from 3/2 to 8/4. Paired with StoneAge Banshee rotary tube cleaning nozzles and Lightweight Positioner, the ABX-3L offers safe and efficient tube cleaning in the harshest exchanger environments.</p>
