--- a/manuals.html
+++ b/manuals.html
@@ -58,14 +58,6 @@ permalink: /manuals
             </thead>
             <tbody class="searchable">
               <tr>
-                <td><a href="/abx-2l">ABX-100-XX</a></td>
-                <td>AUTOBOX ABX-2L HOSE GUIDE (ABX-100-XX) UPGRADE<br>Upgrade process for ABX-2L to ABX-2L-V2 (6mm to 8mm hose)</td>
-                <td class="text-center"></td>
-                <td class="text-center"></td>
-                <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-100-XX_Upgrade_Guide.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
-              </tr>
-              <tr>
                 <td><a href="/abx-2l">ABX-2L-V2</a><br></td>
                 <td>AUTOBOX ABX-2L-V2<br>Automated system for dual flex lancing of exchanger tube IDs</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 602-V2</a><br><small class="grey">Updated: 03/2019</small></td>
@@ -188,7 +180,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/barracuda">BC-H9-XXLF-C-TI</a></td>
                 <td>BARRACUDA<br>44k XX-Low Flow rotary shotgun nozzle</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BC-H9-XXLF-C-TI_Manual.pdf" target="_blank" class="btn btn-sm">PL 566</a><br><small class="grey">Updated: 01/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BC-H9-XXLF-C-TI_manual.pdf" target="_blank" class="btn btn-sm">PL 566</a><br><small class="grey">Updated: 01/2017</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BC_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2017</small></td>
                 <td class="text-center"></td>
@@ -501,9 +493,17 @@ permalink: /manuals
               <tr>
                 <td><a href="/striker">SKR-100</a></td>
                 <td>STRIKER<br>Remote shotgunning system </td>
-                <td class="text-center"><a href="/assets/pdf/manuals/SKR_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 08/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SKR_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 01/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/SKR_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/SKR_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 10/2016</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/striker">SKR-TRK</a></td>
+                <td>TRACKED STRIKER<br>Remote shotgunning system </td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SKR_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 01/2019</small></td>
+                <td class="text-center"><a href="https://www.stoneagetools.com/assets/pdf/data-sheets/striker_trk_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/striker_trk_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 06/2017</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -661,7 +661,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/wt">WT-3/8-C</a></td>
                 <td>WARTHOG WT-3/8-C<br>Sewer Jetting Nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/WT_Manual_Insert.pdf" target="_blank" class="btn btn-sm">PL 528</a><br><small class="grey">Updated: 09/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/WT_Manual.pdf" target="_blank" class="btn btn-sm">PL 528</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -699,6 +699,12 @@ permalink: /manuals
               </tr>
             </thead>
             <tbody class="searchable-2">
+              <tr>
+                <td>ABX-100-8</td>
+                <td>AUTOBOX ABX-2L HOSE GUIDE (ABX-100-XX) UPGRADE<br>Upgrade process for ABX-2L to ABX-2L-V2 (6mm to 8mm hose)</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-100-XX_Upgrade_Guide.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_ABX-100.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
               <tr>
                 <td>ABX-2L</td>
                 <td>AUTOBOX ABX-2L - Version 1<!--<br>Serial numbers XXX-XXXX <em class="grey" data-toggle="tooltip" data-placement="top" title="Just take a look at the bottom of the box, bro!"><i class="fa fa-info-circle"></i> Which one do I have?</em></td>-->
